Add: Enable development mode flag and adjust argument handling in Polocloud launcher